Ensure that nothing gets hidden behind the footer

--- a/app/assets/stylesheets/cyber-dojo.css.scss
+++ b/app/assets/stylesheets/cyber-dojo.css.scss
@@ -5,6 +5,8 @@ table { border-spacing: 0; }
   font-size: 0.9em;
   margin: { top: 0.3em; left: 0.3em; }
   color: $lighter-color;
+  // ensure that nothing gets hidden by the footer
+  padding-bottom: 32px;
 }
 
 body {
